--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Record and share my own front-end learning experience",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --config ./webpack.dev.js"
+    "dev": "vuepress dev ./docs",
+    "build": "vuepress build ./docs"
   },
   "repository": {
     "type": "git",
@@ -27,30 +27,6 @@
   },
   "homepage": "https://github.com/LemonYo/web-source#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.4.5",
-    "autoprefixer": "^9.6.0",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "less": "^3.9.0",
-    "less-loader": "^5.0.0",
-    "node-sass": "^4.12.0",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.35.2",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "loadsh": "0.0.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1"
+    "vuepress": "^1.0.3"
   }
 }
